#450 Updated propertyToProperty calculation logic (part 2)